--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,11 @@ nav {
     padding-top: 25px;
 }
 
+nav a:hover {
+    background-color:white;
+    color:black
+}
+
 li {
     display:inline-block;
 }
@@ -61,11 +66,11 @@ a {
     align-items: center;
     padding: 20px;
     background-color: #735b4d;
+    flex-wrap: wrap;
 }
  .left h2 {
     height: 70%;
     border-right: solid #d9cec5;
-    padding: 10px;
     letter-spacing: 10px;
     padding-top: 20px;
  }
@@ -73,8 +78,6 @@ a {
  h2 {
     font-family:Arial, Helvetica, sans-serif;
  }
-
-/*everything before this is done*/
 
 .right {
     width:75%;
@@ -86,93 +89,41 @@ a {
     text-indent: 50px;
 }
 
-.project {
-    border: solid 5px yellow;
-    margin: 5px;
+.right p {
+    font-family: Arial, Helvetica, sans-serif;
+    word-spacing: 5px;
+    line-height: 40px;
+    text-align: end;
 }
+
 .projects {
     display: flex;
     flex-wrap: wrap;
 }
-
-.text-block {
-    position: relative;
+.project {
+    flex-wrap: wrap;
+    font: solid 5px yellow;
+    margin: 5px;
+    flex-direction: column;
 }
 
-.text-block h2 {
-    font-family: 'Courier New', Courier, monospace;
-    position: absolute;
-    right:40px;
-    top:175px;
-    background-color: #f2f2f2;
-    color: #011126;
-    
+.project h3 {
+    margin-left: 0%;
+    font-size: x-large;
+    text-decoration: underline;
 }
 
-main {
-    
-}
-
-/* Not sure about this stuff yet
-main div {
-    display:grid;
-    width: 540px;
-    grid-template-columns: 120px 120px;
-    align-items: flex-start;
-    justify-content: space-between;
-}
-
-.box {
-
-}
-*/
-
-aside {
+.project img {
     display: block;
-    flex-direction: column;
-    width: 30%;
-    margin-left: 0px;
-    padding-left: 0px;
-    float: left;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 200%;
-    font-weight: bold;
-    background-color: #407344;
-    color: #f2f2f2;
+    width: 50%;
+    margin-left: 0;   
+    border:#735b4d solid;
 }
 
-aside p1 {
-    display: flex;
+.contacts {
     flex-direction: column;
-    border-right:#f2f2f2 solid 2px;
-    margin: 10px;
-    height: 200px;
-    justify-content: flex-start;
-}
-
-aside p2 {
-    display: flex;
-    flex-direction: column;
-    border-right: #f2f2f2 solid 2px;
-    margin: 10px;
-    height: 200px;
-}
-
-aside p3 {
-    display: flex;
-    flex-direction: column;
-    border-right: #f2f2f2 solid 2px;
-    margin: 10px;
-    height: 200px;
-}
-
-p {
-    flex-wrap:wrap;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 100%;
-    letter-spacing: 2px;
-    word-spacing: 5px;
-    
+    background-color: black;
+    border: #d9cec5 solid;
 }
 
 @media screen and <max-width: 900> {
@@ -186,24 +137,14 @@ p {
     }
 }
 
- /*Not sure about this stuff yet
-div {
-    flex-wrap: wrap;
-}
-*/
 
 /*
-GIVEN I need to sample a potential employee's previous work
-WHEN I load their portfolio
-THEN I am presented with the developer's name, a recent photo or avatar, and links to sections about them, their work, and how to contact them
-WHEN I click one of the links in the navigation
-THEN the UI scrolls to the corresponding section
+
 WHEN I click on the link to the section about their work
 THEN the UI scrolls to a section with titled images of the developer's applications
 WHEN I am presented with the developer's first application
 THEN that application's image should be larger in size than the others
-WHEN I click on the images of the applications
-THEN I am taken to that deployed application
+
 WHEN I resize the page or view the site on various screens and devices
 THEN I am presented with a responsive layout that adapts to my viewport
 */
