--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,11 +5,13 @@ body {
     background-color: black;
 }
 
+/*Header contatins developer's name and photo*/
 header {
     flex-wrap: wrap;
     background-color: black;
 }
 
+/*inteded to improve placement of photo and h1*/
 .name-and-photo img {
     display: flex;
     flex-direction: column;
@@ -17,6 +19,7 @@ header {
     width: 30%;
 }
 
+/*h1 is developer's name*/
 h1 {
     display: flex;
     flex-direction: column;
@@ -26,6 +29,8 @@ h1 {
     text-align: center;
 }
 
+/*nav intended to center navigation links that will direct the user 
+to the desired sections on the page */
 nav {
     justify-content: space-between;
     letter-spacing: 2px;
@@ -36,29 +41,35 @@ nav {
     padding-top: 25px;
 }
 
+/* nav hover to add reactivity to nav bar in order to make more user friendly */
 nav a:hover {
     background-color:white;
     color:black
 }
 
+/*improve placement of navigation elements */
 li {
     display:inline-block;
 }
 
-a {
+/*links navigatiion elements to correct section on page*/
+li a {
     text-decoration: none;
     font: Arial, Helvetica, sans-serif;
-    margin: 50px;
     color:#f2f2f2;
     font-size:x-large;
     font-weight: bold;
+    padding: 50px;
 }
 
+/*main container on the page; includes all of the body elements*/
 .section {
    display: flex;
    padding: 10px;
+   position: relative;
 }
 
+/*includes left side containers on the page*/ 
 .left {
     width: 25%;
     display: flex;
@@ -68,7 +79,9 @@ a {
     background-color: #735b4d;
     flex-wrap: wrap;
 }
- .left h2 {
+
+/*headings within the left side containers on the page*/
+.left h2 {
     height: 70%;
     border-right: solid #d9cec5;
     letter-spacing: 10px;
@@ -79,6 +92,7 @@ a {
     font-family:Arial, Helvetica, sans-serif;
  }
 
+/*includes right side containers on the page*/ 
 .right {
     width:75%;
     padding: 20px;
@@ -89,6 +103,7 @@ a {
     text-indent: 50px;
 }
 
+/*pareagraph within the right "about me" container*/ 
 .right p {
     font-family: Arial, Helvetica, sans-serif;
     word-spacing: 5px;
@@ -96,36 +111,71 @@ a {
     text-align: end;
 }
 
+/*all elements within the right container for the "work" category*/
 .projects {
     display: flex;
     flex-wrap: wrap;
 }
 .project {
     flex-wrap: wrap;
-    font: solid 5px yellow;
     margin: 5px;
     flex-direction: column;
+    position: relative;
 }
 
-.project h3 {
-    margin-left: 0%;
-    font-size: x-large;
-    text-decoration: underline;
+/*Main Project Elements*/
+.main-project {
+    position:relative;
 }
 
-.project img {
+.main-project img {
     display: block;
-    width: 50%;
+    width: 100%;
     margin-left: 0;   
     border:#735b4d solid;
 }
 
+.text-block1 {
+    position: absolute;
+    flex-wrap:wrap;
+    top: 400px;
+    left: 0px;
+    background-color: black;
+    color:#f2f2f2;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-right: 15px;
+    padding-left: 40px;
+    font-size: xx-large;
+}
+
+/*Sub Project Elements*/
+.sub-projects {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.sub-projects img {
+    padding: 20px;
+    width: 45%;
+}
+
+/*footer container with contact links*/
 .contacts {
     flex-direction: column;
     background-color: black;
     border: #d9cec5 solid;
+    text-decoration: none;
+    font: Arial, Helvetica, sans-serif;
+    color:#f2f2f2;
+    font-size:x-large;
+    font-weight: bold;
 }
 
+/*applies responsive design to page*/
 @media screen and <max-width: 900> {
     header {
         flex-direction: column;
@@ -136,15 +186,3 @@ a {
         flex-direction: column;
     }
 }
-
-
-/*
-
-WHEN I click on the link to the section about their work
-THEN the UI scrolls to a section with titled images of the developer's applications
-WHEN I am presented with the developer's first application
-THEN that application's image should be larger in size than the others
-
-WHEN I resize the page or view the site on various screens and devices
-THEN I am presented with a responsive layout that adapts to my viewport
-*/
