--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,7 +65,6 @@ li a {
 /*main container on the page; includes all of the body elements*/
 .section {
    display: flex;
-   padding: 10px;
    position: relative;
 }
 
@@ -98,8 +97,6 @@ li a {
     padding: 20px;
     background-color: #d9cec5;
     flex-wrap: wrap;
-    line-height: 35px;
-    font-family: Arial, Helvetica, sans-serif;
     text-indent: 50px;
 }
 
@@ -130,7 +127,7 @@ li a {
 
 .main-project img {
     display: block;
-    width: 100%;
+    width:100%;
     margin-left: 0;   
     border:#735b4d solid;
 }
@@ -138,7 +135,7 @@ li a {
 .text-block1 {
     position: absolute;
     flex-wrap:wrap;
-    top: 400px;
+    top: 600px;
     left: 0px;
     background-color: black;
     color:#f2f2f2;
@@ -176,7 +173,7 @@ li a {
 }
 
 /*applies responsive design to page*/
-@media screen and <max-width: 900> {
+@media screen and (max-width: 900px) {
     header {
         flex-direction: column;
     }
