--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,7 +127,7 @@ li a {
 
 .main-project img {
     display: block;
-    width:100%;
+    /*width:100%;*/
     margin-left: 0;   
     border:#735b4d solid;
 }
